# cmake-protobuf-library

./: CMakeLists.txt  README.md  vcpkg.json
app/: CMakeLists.txt  main.cc
libA/: CMakeLists.txt  lib_a_api.cc  lib_a_api.h
libB/: CMakeLists.txt  lib_b_api.cc  lib_b_api.h
proto/: CMakeLists.txt  schema.proto
